--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>AltSchool Assignment 2</h1>
     <div>
-   <li><a href="media.html" target="_blank">My Multi Media</a></li>
-   <li><a href="table.html" target="_blank">Altschool Africa Courses</a></li>
+   <li><a href="media.html">My Multi Media</a></li>
+   <li><a href="table.html">Altschool Africa Courses</a></li>
 </div>
 </body>
 </html>
