--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
         <!-- Different image sources for different screen sizes -->
         <source
           media="(max-width: 480px)"
-          src="./assets/image/mobile image.jpg"
+          src="./assets/image/tablet image.jpg"
           alt="Responsiveness for mobile"
         />
         <source
