--- a/media.html
+++ b/media.html
@@ -11,17 +11,17 @@
         <!-- Different image sources for different screen sizes -->
         <source
           media="(max-width: 480px)"
-          src="./assets/image/mobile image 2.jpg"
+          src="assets/image/mobile image 2.jpg"
           alt="Responsiveness for mobile"
         />
         <source
           media="(max-width: 768px)"
-          src="./assets/image/tablet image.jpg"
+          src="assets/image/tablet image.jpg"
           alt="Responsive for tablet"
         />
         <source
           media="(min-width: 1024px)"
-          src="./assets/image/laptop image 3.jpg"
+          src="assets/image/laptop image 3.jpg"
           alt="Responsiveness for laptop "
         />
         <!-- Fallback image -->
