--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
       <!-- Different image sources for different screen sizes -->
       <source
         media="(max-width: 480px)"
-        srcset="./assets/image/phone image.jpg"
+        srcset="./assets/image/phone image 5.jpg"
         alt="Responsiveness for mobile"
       />
       <source
